# intelpolitics

./: .gitignore  .importlinter  design.md  package-lock.json  package.json  pyproject.toml  sources.v2.yaml  sources.yaml
.claude/: .claude_project
aider-briefs/: d1-kickoff.md  d1-progress.md
docs/: CONTINUATION.md  PROGRESS.md
k3s/migrations/: 001_statements.sql  002_sources_v2.sql  002_sources_v2_rollback.sql  migration-job.yaml
k8s/: Dockerfile  backup-dumps-pvc.yaml  build-phase-c-image.sh  entrypoint.sh  networkpolicy.yaml  postgres-backup-nightly.yaml  scrape-cronjob.yaml  scrape-job.yaml
review-queues/: d1-review-2026-05-09.md
scripts/: write_review_queue.py
src/: __init__.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/compare/: page.tsx
src/app/dossier/: page.tsx
src/app/search/: page.tsx
src/components/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/db/: postgres.py
src/extractor/: extract.py
src/pipelines/: d1_run.py  multi_politician.py  olares_value_test.py  phase_c_starmer.py  seed_from_fixtures.py
src/scoring/: __init__.py  starmer_scorecard.py
src/scraper/: fetch.py  sources.py  sources_v2.py  strategies_starmer.py
stitch-designs/: comparison-command-center-desktop.html  dossier-lobbying-nexus-desktop.html  dossier-refined-desktop.html  dossier-refined-nexus-desktop-2.html  dossier-refined-nexus-desktop.html  intelligence-hub-desktop.html  politician-dossier-desktop.html  truthfulness-intelligence-desktop.html
tests/: test_extract.py
tests/fixtures/: bbc_meloni.html  hansard_starmer.html  whitehouse_briefing.html
(+1 files in other folders)
