[project]
name = "intelpolitics-pipeline"
version = "0.1.0"
description = "D.1 scrape→extract→load pipeline for the intelpolitics venture (5 politicians, Olares Ollama backend)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "psycopg[binary]>=3.2",
    "tenacity>=9.0",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "patchright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "import-linter>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["src.app*", "src.components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
